--- a/_includes/header.html
+++ b/_includes/header.html
@@ -15,6 +15,8 @@
                 {% endif %}
                 {% endunless %}
             {% endfor %}
+            <a href="https://github.com/andrewcodes/daryl">GitHub Repo</a>
+            <a href="https://github.com/andrewcodes/daryl/archive/master.zip">Download</a>
         </nav>
 
     </div> <!-- .wrapper -->
