--- a/_includes/head.html
+++ b/_includes/head.html
@@ -15,7 +15,7 @@
 
     <!-- Google Analytics -->
     <!-- Remove this before deploying your Jekyll site -->
-	<!-- <script>
+	<script>
 	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 	  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
 	  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
@@ -24,5 +24,5 @@
 	  ga('create', 'UA-69798912-1', 'auto');
 	  ga('send', 'pageview');
 
-	</script> -->
+	</script>
 </head>
