--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,8 +2,9 @@
 
   <div class="wrapper">
     <p class="rss-subscribe">Subscribe <a href="{{ "/feed.xml" | prepend: site.baseurl }}">via RSS</a></p>
-    <p><a href="http://jekyllrb.com">Jekyll</a></p>
-    <p>Thanks for checking out the <a href="http://daryl.andrewlee.name">Daryl</a> theme.</p>
+    <p>powered by <a href="http://jekyllrb.com">Jekyll</a></p>
+    <p>Canor의 블로그를 방문해 주셔서 감사합니다</p>
+    <p><a href="http://daryl.andrewlee.name">Daryl</a> theme created by <a href="https://github.com/andrewcodes/daryl">Andrew Lee</a>.</p>
     <p>&copy; 2015 by Andrew Lee. All rights reserved.</p>
 
   </div> <!-- .wrapper -->
