--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,7 +8,7 @@
     {% include header.html %}
 
     <div class="page-content">
-      <div class="wrapper" style="text-align:center">
+      <div class="wrapper">
         {{ content }}
       </div> <!-- .wrapper -->
     </div> <!-- .page-content -->
