--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,9 +2,10 @@
 
   <div class="wrapper">
     <p class="rss-subscribe">Subscribe <a href="{{ "/feed.xml" | prepend: site.baseurl }}">via RSS</a></p>
-    <p><a href="http://jekyllrb.com">Jekyll</a></p>
-    <p>Thanks for checking out the <a href="http://daryl.andrewlee.name">Daryl</a> theme.</p>
-    <p>&copy; 2015 by Andrew Lee. All rights reserved.</p>
+    <p>Canor의 이야기를 찾아주셔서 감사합니다</p>
+    <p>powered by <a href="http://jekyllrb.com">Jekyll</a></p>
+    <p>Theme: <a href="http://daryl.andrewlee.name">Daryl</a> theme by <a href="https://github.com/andrewcodes/daryl">Andrew Lee</a>. All rights reserved.</p>
+    <!-- <p>&copy; 2015 by Andrew Lee. All rights reserved.</p>  -->
 
   </div> <!-- .wrapper -->
 
