--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -246,9 +246,9 @@ code {
 
 .next {
     float: right;
-    color: #f1f1f1;
+    color: #000000;
     padding: 1em 2em;
-    background: #444;
+    background: transparent;
     text-decoration: none;
 }
 
