--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -195,6 +195,7 @@ code {
 =====================================*/
 /* Archive Page */
 .post-list ul {
+    display: block;
     list-style-type: none;
     margin: 0;
     padding: 0;
