--- a/_includes/social.html
+++ b/_includes/social.html
@@ -1,7 +1,7 @@
 <h6>Follow me</h6>
 
 <ul class="social-media">
-  {% if site.social.rss %}
+  {% if site.social.twitter %}
   <li>
     <a title="{{ site.social.twitter }} on Twitter" href="{{https://twitter.com/{{ site.social.twitter }}" target="_blank"><i class="fa fa-twitter fa-2x"></i></a>
   </li>
