--- a/_includes/social.html
+++ b/_includes/social.html
@@ -3,7 +3,7 @@
 <ul class="social-media">
   {% if site.social.twitter %}
   <li>
-    <a title="{{ site.social.twitter }} on Twitter" href="{{https://twitter.com/{{ site.social.twitter }}" target="_blank"><i class="fa fa-twitter fa-2x"></i></a>
+    <a title="{{ site.social.twitter }} on Twitter" href="https://twitter.com/{{ site.social.twitter }}" target="_blank"><i class="fa fa-twitter fa-2x"></i></a>
   </li>
   {% endif %}
 
