--- a/css/theme.scss
+++ b/css/theme.scss
@@ -53,6 +53,7 @@ body {
 //  color: #ddd;
 //  font: {
 //    size: 1.3em
+//    line-height: 1.3em;
 //  }
 //}/
 h1 { font-size: 2em; }
@@ -190,7 +191,7 @@ div.post-meta {
 //********************************************************
 //                    Header
 //********************************************************
-
+  
 nav a {
   padding-top: 20px !important;
   padding-bottom: 20px !important;
