--- a/css/theme.scss
+++ b/css/theme.scss
@@ -49,13 +49,13 @@ body {
 .main-page {
   width: 75%;
 }
-//.well h1 {
-//  color: #ddd;
-//  font: {
-//    size: 1.3em
-//    line-height: 1.3em;
-//  }
-//}/
+.well h1 {
+  color: #ddd;
+  font: {
+    size: 1.3em
+    line-height: 1.3em;
+  }
+}
 h1 { font-size: 2em; }
 h2 { font-size: 1.5em; }
 h3 { font-size: 1.17em; }
