--- a/css/theme.scss
+++ b/css/theme.scss
@@ -49,10 +49,10 @@ body {
 .main-page {
   width: 75%;
 }
-.well h1 {
+.well h3 {
   color: #ddd;
   font: {
-    size: 1.3em
+//    size: 1.3em
     line-height: 1.3em;
   }
 }
