--- a/css/theme.scss
+++ b/css/theme.scss
@@ -75,8 +75,8 @@ img {
   margin: 0 auto;
   max-width: 100%;
   max-height: 100%;
-  padding-top: 10px;
-  padding-bottom: 10px;
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
 
 img + em {
