--- a/css/theme.scss
+++ b/css/theme.scss
@@ -63,6 +63,10 @@ h4 { font-size: 1.12em; }
 h5 { font-size: .83em; }
 h6 { font-size: .75em; }
 
+.post-content{
+  line-height: 1.3em;
+}
+
 .author {
   color: #ee4444;
 }
