--- a/css/theme.scss
+++ b/css/theme.scss
@@ -1,5 +1,6 @@
 ---
 ---
+@import url(http://fonts.googleapis.com/css?family=Noto+Sans);
 @mixin font-size($size) {
   font-size: $size;
   font-size: calculateRem($size);
@@ -42,6 +43,7 @@ body {
   box-shadow: 0px 0px 0px 0px, 0px 8px 16px rgba(0, 0, 0, 0.2);
   border: 0px;
   border-radius: 6px;
+  font-family: 'Noto Sans', sans-serif;
 }
 .well > main-page {
   width: 75%;
