--- a/css/font-awesome/css/font-awesome.css
+++ b/css/font-awesome/css/font-awesome.css
@@ -4,6 +4,8 @@
  */
 /* FONT PATH
  * -------------------------- */
+@import url(http://fonts.googleapis.com/css?family=Noto+Sans);
+
 @font-face {
   font-family: 'FontAwesome';
   src: url('../fonts/fontawesome-webfont.eot?v=4.4.0');
@@ -13,7 +15,7 @@
 }
 .fa {
   display: inline-block;
-  font: normal normal normal 14px/1 FontAwesome;
+  font-family: normal normal normal 14px/1 'Noto Sans', FontAwesome;
   font-size: inherit;
   text-rendering: auto;
   -webkit-font-smoothing: antialiased;
