--- a/css/theme.scss
+++ b/css/theme.scss
@@ -68,7 +68,7 @@ h6 { font-size: .75em; }
 
 .post-content{
   line-height: 1.7em;
-  font-family: 'Noto Sans', sans-serif;
+  font-family: "Noto Sans", sans-serif;
 }
 
 .author {
