--- a/css/theme.scss
+++ b/css/theme.scss
@@ -69,6 +69,9 @@ h6 { font-size: .75em; }
 
 .post-content{
   line-height: 1.7em;
+}
+
+post-content{
   font-family: 'Noto Sans', sans-serif;
 }
 
