--- a/css/theme.scss
+++ b/css/theme.scss
@@ -67,7 +67,7 @@ h4 { font-size: 1.12em; }
 h5 { font-size: .83em; }
 h6 { font-size: .75em; }
 
-.post-content{
+div.post-content{
   line-height: 1.7em;
   font-family: 'Noto Sans', 'Noto Sans CJK KR' , sans-serif;
 }
