--- a/css/theme.scss
+++ b/css/theme.scss
@@ -69,7 +69,7 @@ h6 { font-size: .75em; }
 
 div.post-content{
   line-height: 1.7em;
-  font-family: 'Noto Sans', 'Noto Sans CJK KR' , sans-serif;
+  font-family: 'Noto Sans', sans-serif;
 }
 
 .author {
