--- a/css/theme.scss
+++ b/css/theme.scss
@@ -18,7 +18,7 @@ body {
   color: #ddd;
   background-color: #292929;
   background-image: url(./pics/triangles.png);
-  font-family: 'Noto Sans', sans-serif;
+  font-family: 'Noto Sans';
 }
 .copyright {
   color: #ffffff;
@@ -41,7 +41,7 @@ body {
 }
 
 div.article{
-  font-family: 'Noto Sans', sans-serif;
+  font-family: 'Noto Sans';
 }
 
 .well {
