--- a/css/theme.scss
+++ b/css/theme.scss
@@ -63,7 +63,7 @@ div.article{
 //    size: 1.3em
   }
 }
-h1 { font-size: 2em; }
+h1 { font-size: 2em; font-family: 'Noto Sans';}
 h2 { font-size: 1.5em; }
 h3 { font-size: 1.17em; }
 h4 { font-size: 1.12em; }
