--- a/css/theme.scss
+++ b/css/theme.scss
@@ -44,6 +44,10 @@ div.article{
   font-family: 'Noto Sans';
 }
 
+.p{
+  font-family: 'Noto Sans';
+}
+
 .well {
   background-color: #444;
   box-shadow: 0px 0px 0px 0px, 0px 8px 16px rgba(0, 0, 0, 0.2);
@@ -63,7 +67,7 @@ div.article{
 //    size: 1.3em
   }
 }
-h1 { font-size: 2em; font-family: 'Noto Sans';}
+h1 { font-size: 2em; }
 h2 { font-size: 1.5em; }
 h3 { font-size: 1.17em; }
 h4 { font-size: 1.12em; }
