--- a/css/theme.scss
+++ b/css/theme.scss
@@ -40,11 +40,7 @@ body {
   line-height: 1em;
 }
 
-div.article{
-  font-family: 'Noto Sans';
-}
-
-.p{
+.article{
   font-family: 'Noto Sans';
 }
 
