--- a/css/theme.scss
+++ b/css/theme.scss
@@ -18,7 +18,7 @@ body {
   color: #ddd;
   background-color: #292929;
   background-image: url(./pics/triangles.png);
-  font-family: 'Noto Sans', 'Noto Sans CJK KR';
+  font-family: 'Noto Sans';
 }
 .copyright {
   color: #ffffff;
