--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,7 @@
 
   {% include head.html %}
 
-  <body class="layout-reverse" class="theme-base-01">
+  <body class="layout-reverse theme-base-01">
 
     {% include sidebar.html %}
 
