--- a/public/css/blackdoc.css
+++ b/public/css/blackdoc.css
@@ -41,7 +41,7 @@ body {
 }
 
 h1, h2, h3, h4, h5, h6 {
-  font-family: 'EB Garamond', serif;
+  font-family: 'Noto Sans','EB Garamond', sans-serif;
   color: #aaa;
 }
 
@@ -202,7 +202,7 @@ tbody tr:nth-child(odd) th {
 .sidebar-about h1 {
   color: #caad00;
   margin-top: 0;
-  font-family: 'Noto Serif', serif;
+  font-family: 'Noto Sans', 'Noto Serif', sans-serif;
   font-size: 2.25rem;
 
 }
