--- a/public/css/blackdoc.css
+++ b/public/css/blackdoc.css
@@ -47,7 +47,7 @@ h1, h2, h3, h4, h5, h6 {
 
 h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
   font-family: 'Noto Sans', 'EB Garamond', sans-serif;
-  color: #50585D;
+  color: #2EACFF;
   font-kerning: auto;
   font-feature-settings: "kern","liga","dlig","hlig","cswh";
   font-synthesis: weight style;
