--- a/public/css/blackdoc.css
+++ b/public/css/blackdoc.css
@@ -42,7 +42,7 @@ body {
 
 h1, h2, h3, h4, h5, h6 {
   font-family: 'Noto Sans','EB Garamond', sans-serif;
-  color: ##2EACFF;
+  color: ##2EACFFz;
 }
 
 h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
