--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -12,6 +12,7 @@ layout: default
   <h2>Related Posts</h2>
   <ul class="related-posts">
     {% for post in site.related_posts limit:3 %}
+      {% unless post.menu == 'private' %}
       <li>
         <h3>
           <a href="{{ post.url }}">
@@ -20,6 +21,7 @@ layout: default
           </a>
         </h3>
       </li>
+      {% endunless %}
     {% endfor %}
   </ul>
 </div>
