--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -28,8 +28,8 @@
 
       <a class="sidebar-nav-item" href="{{ site.github.repo }}/archive/master.zip">Download</a>
       <hr>
-      <a class="sidebar-nav-item" href="{{ site.github.repo }}">GitHub project</a>
-      <span class="sidebar-nav-item">Currently v{{ site.version }}</span>
+      <p style="font-size:0.8rem">This blog is themed with <a class="sidebar-nav-item" href="{{ site.github.repo }}">BlackDoc Jekyll theme</a> by <a href="https://github.com/karloespiritu">karloespiritu</a>
+      <!--<span class="sidebar-nav-item">Currently v{{ site.version }}</span>-->
     </nav>
 
     <p>&copy; {{ site.time | date: '%Y' }}. All rights reserved.</p>
