--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -32,6 +32,6 @@
       <!--<span class="sidebar-nav-item">Currently v{{ site.version }}</span>-->
     </nav>
 
-    <p>&copy; {{ site.time | date: '%Y' }}. All rights reserved.</p>
+    <p style="font-size:0.5rem">&copy; {{ site.time | date: '%Y' }}. All rights reserved.</p>
   </div>
 </div>
