--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -28,7 +28,7 @@
 
       <a class="sidebar-nav-item" href="{{ site.github.repo }}/archive/master.zip">Download</a>
       <hr>
-      <p style="font-size:0.5rem">This blog is themed with <a class="sidebar-nav-item" href="{{ site.github.repo }}">BlackDoc Jekyll theme</a> by <a href="https://github.com/karloespiritu">karloespiritu</a>
+      <p style="font-size:0.5rem">This blog is themed based on <a class="sidebar-nav-item" href="{{ site.github.repo }}">BlackDoc Jekyll theme</a> by <a href="https://github.com/karloespiritu">karloespiritu</a>
       <!--<span class="sidebar-nav-item">Currently v{{ site.version }}</span>-->
     </nav>
 
