--- a/public/css/blackdoc.css
+++ b/public/css/blackdoc.css
@@ -56,6 +56,7 @@ h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
 a {
   color: #55bbff;
   transition: color ease 0.3s;
+  text-decoration: underline;
 }
 
 a:hover {
