--- a/public/css/blackdoc.css
+++ b/public/css/blackdoc.css
@@ -51,6 +51,7 @@ h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
   font-kerning: auto;
   font-feature-settings: "kern","liga","dlig","hlig","cswh";
   font-synthesis: weight style;
+  text-decoration:none;
 }
 
 a {
