--- a/public/css/blackdoc.css
+++ b/public/css/blackdoc.css
@@ -216,6 +216,7 @@ tbody tr:nth-child(odd) th {
 .sidebar-nav-item {
   display: block;
   line-height: 1.75;
+  text-decoration: none;
 }
 a.sidebar-nav-item:hover,
 a.sidebar-nav-item:focus {
