--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,7 +1,7 @@
 <div class="sidebar">
   <div class="container sidebar-sticky">
     <div class="sidebar-about">
-      <h1>
+      <h1 style="text-decoration: none">
         <a href="{{ site.baseurl }}">
           {{ site.title }}
         </a>
