--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,8 +1,8 @@
 <div class="sidebar">
   <div class="container sidebar-sticky">
     <div class="sidebar-about">
-      <h1 style="text-decoration: none;">
-        <a href="{{ site.baseurl }}">
+      <h1>
+        <a href="{{ site.baseurl }}" style="text-decoration: none">
           {{ site.title }}
         </a>
       </h1>
