--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,6 +6,8 @@ layout: default
   <h1 class="post-title">{{ page.title }}</h1>
   <span class="post-date">{{ page.date | date_to_string }}</span>
   {{ content }}
+  <hr>
+  {% include post-tags.html %}
 </div>
 
 <div id="disqus_thread"></div> <!--disqus comment -->
