--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,10 +4,10 @@ layout: default
 
 <div class="post">
   <h1 class="post-title">{{ page.title }}</h1>
-  <span class="post-date">{{ page.date | date_to_string }}</span>
+  <span class="post-date">{{ page.date | date_to_string }}</span><span>{% include post-tags.html %}</span>
   {{ content }}
   <hr>
-  {% include post-tags.html %}
+
 </div>
 
 <div id="disqus_thread"></div> <!--disqus comment -->
