--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,8 +4,7 @@ layout: default
 
 <div class="post">
   <h1 class="post-title">{{ page.title }}</h1>
-  <span class="post-date">{{ page.date | date_to_string }}</span><br/>
-  <span class="posttags">{% include post-tags.html %}</span> 
+  <span class="post-date">{{ page.date | date_to_string }}</span><span class="posttags">{% include post-tags.html %}</span> 
   {{ content }}
   <hr>
 
