--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,7 +5,7 @@ layout: default
 <div class="post">
   <h1 class="post-title">{{ page.title }}</h1>
   <div>
-    <span class="post-date">{{ page.date | date_to_string }}</span><span class="posttags">{% include post-tags.html %}</span>
+    <span class="post-date">{{ page.date | date_to_string }}</span><span class="posttags" style="font-size:0.8em">{% include post-tags.html %}</span>
   </div>
   {{ content }}
   <hr>
