--- a/public/css/poole.css
+++ b/public/css/poole.css
@@ -347,7 +347,7 @@ tbody tr:nth-child(odd) th {
 
 /* Meta data line below post title */
 .post-date {
-  display: block;
+  /*display: block;*/
   margin-top: -.5rem;
   margin-bottom: 1rem;
   color: #9a9a9a;
