--- a/public/css/poole.css
+++ b/public/css/poole.css
@@ -68,7 +68,7 @@ body {
 /* No `:visited` state is required by default (browsers will use `a`) */
 a {
   color: #268bd2;
-  text-decoration: none;
+  /*text-decoration: none;*/
 }
 a strong {
   color: inherit;
