--- a/public/css/blackdoc.css
+++ b/public/css/blackdoc.css
@@ -286,6 +286,8 @@ a.sidebar-nav-item:focus {
   padding-left: 0;
   padding-right: 0;
   text-align: center;
+  margin-left: 0;
+  margin-right: 0;
 }
 
 /*
