--- a/public/css/blackdoc.css
+++ b/public/css/blackdoc.css
@@ -250,6 +250,7 @@ a.sidebar-nav-item:focus {
 .content {
   padding-top:    4rem;
   padding-bottom: 4rem;
+  font-size: 16px;
 }
 
 @media (min-width: 48em) {
