--- a/public/css/blackdoc.css
+++ b/public/css/blackdoc.css
@@ -32,7 +32,7 @@ ______ _            _   ______
 @import url(http://fonts.googleapis.com/css?family=Noto+Sans);
 
 html {
-  font-family: 'Noto Sans', "PT Sans", Helvetica, Arial, sans-serif;
+  font-family: "Noto Sans", "PT Sans", Helvetica, Arial, sans-serif;
 }
 
 body {
