--- a/public/css/blackdoc.css
+++ b/public/css/blackdoc.css
@@ -38,6 +38,7 @@ html {
 body {
   color: #848482;
   background-color: #000000;
+  font-family: "Noto Sans", "PT Sans", Helvetica, sans-serif;
 }
 
 h1, h2, h3, h4, h5, h6 {
