--- a/public/css/blackdoc.css
+++ b/public/css/blackdoc.css
@@ -29,25 +29,26 @@ ______ _            _   ______
  * Update the foundational and global aspects of the page.
  */
 
-@import url(http://fonts.googleapis.com/css?family=Noto+Sans);
+@import url(//spoqa.github.io/spoqa-han-sans/css/SpoqaHanSans-kr.css);
+@import url(//spoqa.github.io/spoqa-han-sans/css/SpoqaHanSans-jp.css);
 
 html {
-  font-family: "Noto Sans", "PT Sans", Helvetica, Arial, sans-serif;
+  font-family: 'Spoqa Han Sans', 'Spoqa Han Sans JP', "PT Sans", Helvetica, Arial, sans-serif;
 }
 
 body {
   color: #848482;
   background-color: #000000;
-  font-family: "Noto Sans", "PT Sans", Helvetica, sans-serif;
+  font-family: 'Spoqa Han Sans', 'Spoqa Han Sans JP', "PT Sans", Helvetica, sans-serif;
 }
 
 h1, h2, h3, h4, h5, h6 {
-  font-family: 'Noto Sans','EB Garamond', sans-serif;
+  font-family: 'Spoqa Han Sans', 'Spoqa Han Sans JP','EB Garamond', sans-serif;
   color: #2EACFF;
 }
 
 h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
-  font-family: 'Noto Sans', 'EB Garamond', sans-serif;
+  font-family: 'Spoqa Han Sans', 'Spoqa Han Sans JP', 'EB Garamond', sans-serif;
   color: #2EACFF;
   font-kerning: auto;
   font-feature-settings: "kern","liga","dlig","hlig","cswh";
@@ -67,7 +68,7 @@ a:hover {
 .btn {
   display: inline-block;
   padding: .25rem 1rem;
-  font-family: "PT Sans", sans-serif;
+  font-family: 'Spoqa Han Sans', 'Spoqa Han Sans JP', "PT Sans", sans-serif;
   color: #ebcb8b;
   border: .1rem solid #32343c;
   border-radius: .1rem;
@@ -204,7 +205,7 @@ tbody tr:nth-child(odd) th {
 .sidebar-about h1 {
   color: #2EACFF;
   margin-top: 0;
-  font-family: 'Noto Sans', 'Noto Serif', sans-serif;
+  font-family: 'Spoqa Han Sans', 'Spoqa Han Sans JP', 'Noto Serif', sans-serif;
   font-size: 2.25rem;
 
 }
