--- a/public/css/poole.css
+++ b/public/css/poole.css
@@ -35,6 +35,8 @@
  * Update the foundational and global aspects of the page.
  */
 
+@import url(http://fonts.googleapis.com/earlyaccess/notosanskr.css);
+
 * {
   -webkit-box-sizing: border-box;
      -moz-box-sizing: border-box;
@@ -48,7 +50,7 @@ body {
 }
 
 html {
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: 'Noto Sans', "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 16px;
   line-height: 1.5;
 }
