--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,7 +1,41 @@
 <!DOCTYPE html>
 <html lang="en-us">
+<head>
+<style>
+#searchBar {
+    font-size: 80%;
+    padding: 0.43em 0 0.57em;
+    #search {
+        float: right;
+        #searchString {
+            width: 283px;
+            border: none;
+            box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2) inset;
+            padding: 0.3em 0.6em;
+            background-color: #f6f5ea;
+            margin-right: 0;
+        }
+        #searchButton {
+            padding: 0.3em 0.6em;
+            background-color: #0B5485;
+            border: 1px solid #f6f5ea;
+            margin-left: 0;
+            color: $white;
+            -webkit-appearance: none;
+            border-radius: 0;
+        }
+        #archives {
+            line-height: 2;
+            float: left;
+            color: $black;
+            text-wrap: avoid;
+        }
+    }
+}
+</style>
+</head>
 
-  {% include head.html %}
+{% include head.html %}
 
   <body class="layout-reverse theme-base-03">
 
@@ -10,6 +44,19 @@
     <div class="content container">
       {{ content }}
     </div>
+
+    <div class="grid" id="searchBar">
+    <div>
+        <div id="search">
+            <form role="search" method="get" action="{{ site.baseurl }}/search/">
+                <input id="searchString" name="searchString"
+                    placeholder=" " type="text">
+                <input id="searchButton" name="googleSearchName" type="button" value="Search">
+            </form>
+        </div>
+    </div>
+
+</div>
 
   </body>
 </html>
