--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,3 +1,39 @@
+<!DOCTYPE html>
+<html lang="en-us">
+<head>
+<style>
+#searchBar {
+    font-size: 80%;
+    padding: 0.43em 0 0.57em;
+    #search {
+        float: right;
+        #searchString {
+            width: 283px;
+            border: none;
+            box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2) inset;
+            padding: 0.3em 0.6em;
+            background-color: #f6f5ea;
+            margin-right: 0;
+        }
+        #searchButton {
+            padding: 0.3em 0.6em;
+            background-color: #0B5485;
+            border: 1px solid #f6f5ea;
+            margin-left: 0;
+            color: $white;
+            -webkit-appearance: none;
+            border-radius: 0;
+        }
+        #archives {
+            line-height: 2;
+            float: left;
+            color: $black;
+            text-wrap: avoid;
+        }
+    }
+}
+</style>
+</head>
 <div class="sidebar">
   <div class="container sidebar-sticky">
     <div class="sidebar-about">
@@ -30,6 +66,17 @@
       <hr>
       <a href="http://canorus.github.io/tags" style="text-decoration:none">Tags</a>
       <hr>  
+      <div class="grid" id="searchBar">
+        <div>
+            <div id="search">
+                <form role="search" method="get" action="{{ site.baseurl }}/search/">
+                    <input id="searchString" name="searchString"
+                        placeholder=" " type="text">
+                    <input id="searchButton" name="googleSearchName" type="button" value="Search">
+                </form>
+            </div>
+        </div>
+      <hr>
       <p style="font-size:0.5rem">This blog is themed based on <a class="sidebar-nav-item" href="{{ site.github.repo }}">BlackDoc Jekyll theme</a> by <a href="https://github.com/karloespiritu">karloespiritu</a>
       <!--<span class="sidebar-nav-item">Currently v{{ site.version }}</span>-->
     </nav>
