--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -69,10 +69,10 @@
       <div class="grid" id="searchBar">
         <div>
             <div id="search">
-                <!--<form role="search" method="get" action="{{ site.baseurl }}/search/">
+                <form role="search" method="get" action="function()">
                     <input id="searchString" name="searchString"
-                        placeholder=" " type="text">
-                    <input id="searchButton" name="googleSearchName" type="button" value="Search">-->
+                        placeholder="Input text" type="text">
+                    <input id="searchButton" name="googleSearchName" type="button" value="Search">
                     <script>
                     (function() {
                         var cx = '002774646318515022626:8r3kffjur0m';
@@ -84,7 +84,7 @@
                         s.parentNode.insertBefore(gcse, s);
                     })();
                     </script>
-                    <gcse:search queryParameterName="searchString"></gcse:search>
+                    <!--<gcse:search queryParameterName="searchString"></gcse:search>-->
                 </form>
             </div>
         </div>
