--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -66,7 +66,7 @@
       <hr>
       <a href="http://canorus.github.io/tags" style="text-decoration:none">Tags</a>
       <hr>  
-      <div class="grid" id="searchBar">
+      <!--<div class="grid" id="searchBar">
         <div>
             <div id="search">
                 <form role="search" method="get" action="{{ site.baseurl }}/search">
@@ -85,11 +85,11 @@
                     }
                     function();
                     </script>
-                    <!--<gcse:search queryParameterName="searchString"></gcse:search>-->
+                    <gcse:search queryParameterName="searchString"></gcse:search>
                 </form>
             </div>
         </div>
-      </div>
+      </div>-->
       <hr>
       <p style="font-size:0.5rem">This blog is themed based on <a class="sidebar-nav-item" href="{{ site.github.repo }}">BlackDoc Jekyll theme</a> by <a href="https://github.com/karloespiritu">karloespiritu</a>
       <!--<span class="sidebar-nav-item">Currently v{{ site.version }}</span>-->
