--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,7 +2,16 @@
   <link href="http://gmpg.org/xfn/11" rel="profile">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta http-equiv="content-type" content="text/html; charset=utf-8">
-
+  <script type="text/javascript" src="/js/jquery-1.11.0.min.js"></script>
+  <script type="text/javascript" src="/js/bigfoot.js"></script>
+  <script type="text/javascript">
+  	var bigfoot = $.bigfoot(
+  		{
+  	  	actionOriginalFN: "ignore",
+  	  	positionContent: "true"
+  		}
+  	);
+  </script>
   <!-- Enable responsiveness on mobile devices-->
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
 
