--- a/public/css/blackdoc.css
+++ b/public/css/blackdoc.css
@@ -31,7 +31,8 @@ ______ _            _   ______
 
 /*@import url(//spoqa.github.io/spoqa-han-sans/css/SpoqaHanSans-kr.css);
 @import url(//spoqa.github.io/spoqa-han-sans/css/SpoqaHanSans-jp.css);*/
-@import "bigfoot-number"
+@import "bigfoot-number";
+
 @font-face{
   font-family: 'Spoqa Han Sans';
   src: url(fonts/SpoqaHanSans-Regular_subset.woff);
