--- a/public/css/blackdoc.css
+++ b/public/css/blackdoc.css
@@ -32,9 +32,11 @@ ______ _            _   ______
 /*@import url(//spoqa.github.io/spoqa-han-sans/css/SpoqaHanSans-kr.css);
 @import url(//spoqa.github.io/spoqa-han-sans/css/SpoqaHanSans-jp.css);*/
 @import "bigfoot-number";
+@import "bigfoot-default";
 @import "base";
 @import "layout";
 @import "syntax-highlighting";
+
 @font-face{
   font-family: 'Spoqa Han Sans';
   src: url(fonts/SpoqaHanSans-Regular_subset.woff);
