--- a/public/css/bigfoot-number.css
+++ b/public/css/bigfoot-number.css
@@ -83,7 +83,7 @@
   border-radius: 0.5em;
   border: 1px solid #c3c3c3;
   box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.3);
-  line-height: 5;
+  line-height: 0;
   -webkit-transition-property: opacity, -webkit-transform;
           transition-property: opacity, transform;
   -webkit-transition-duration: 0.25s;
@@ -214,7 +214,7 @@
   background: #fafafa;
   border-radius: 0.5em;
   -webkit-font-smoothing: subpixel-antialiased;
-  line-height: normal;
+  line-height: 1.2em;
 }
 .bigfoot-footnote__content img {
   max-width: 100%;
