--- a/public/css/blackdoc.css
+++ b/public/css/blackdoc.css
@@ -60,6 +60,10 @@ body {
   font-family: 'Spoqa Han Sans', 'Spoqa Han Sans Bold', 'Spoqa Han Sans Thin', 'Spoqa Han Sans JP', "PT Sans", Helvetica, sans-serif;
 }
 
+.post{
+  font-family: 'Spoqa Han Sans Thin'
+}
+
 h1, h2, h3, h4, h5, h6 {
   font-family: 'Spoqa Han Sans', 'Spoqa Han Sans Bold', 'Spoqa Han Sans Thin', 'Spoqa Han Sans JP','EB Garamond', sans-serif;
   color: #2EACFF;
