--- a/public/css/blackdoc.css
+++ b/public/css/blackdoc.css
@@ -61,7 +61,8 @@ body {
 }
 
 .post{
-  font-family: 'Spoqa Han Sans Thin'
+  font-family: 'Spoqa Han Sans Thin';
+  line-height: 1.5;
 }
 
 h1, h2, h3, h4, h5, h6 {
