--- a/public/css/blackdoc.css
+++ b/public/css/blackdoc.css
@@ -60,7 +60,7 @@ body {
   font-family: 'Spoqa Han Sans', 'Spoqa Han Sans Bold', 'Spoqa Han Sans Thin', 'Spoqa Han Sans JP', "PT Sans", Helvetica, sans-serif;
 }
 
-.post{
+.content {
   font-family: 'Spoqa Han Sans Thin';
   line-height: 1.7;
 }
