--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,9 +7,10 @@ layout: default
   <div>
     <span class="post-date">{{ page.date | date_to_string }}</span>{% include post-tags.html %}
   </div>
-  {{ content }}
-  <hr>
-
+  <div class="post-content">
+    {{ content }}
+    <hr>
+  </div>
 </div>
 
 <div id="disqus_thread"></div> <!--disqus comment -->
@@ -39,7 +40,7 @@ s.setAttribute('data-timestamp', +new Date());
 <div class="related">
   <h2>Related Posts</h2>
   <ul class="related-posts">
-    {% unless post.menu == 'private' %}  
+    {% unless post.menu == 'private' %}
       {% for post in site.related_posts limit:3 %}
         <li>
           <h3>
