--- a/public/css/blackdoc.css
+++ b/public/css/blackdoc.css
@@ -61,7 +61,7 @@ body {
 }
 
 .post-content {
-  font-family: 'Spoqa Han Sans Thin', sans-serif;
+  font-family: 'Spoqa Han Sans Thin', 'Spoqa Han Sans', sans-serif;
   line-height: 1.7;
 }
 
