--- a/public/css/blackdoc.css
+++ b/public/css/blackdoc.css
@@ -55,13 +55,14 @@ html {
 }
 
 body {
-  color: #848482;
+  color: #32323A;
   background-color: #000000;
   font-family: 'Spoqa Han Sans', sans-serif, 'Spoqa Han Sans Bold', 'Spoqa Han Sans Thin', 'Spoqa Han Sans JP', "PT Sans", Helvetica;
 }
 
 .post-content {
   font-family: 'Spoqa Han Sans Thin', 'Spoqa Han Sans', sans-serif;
+  font-size: 12px;
   line-height: 1.7;
 }
 
