--- a/public/css/blackdoc.css
+++ b/public/css/blackdoc.css
@@ -55,8 +55,8 @@ html {
 }
 
 body {
-  color: #32323A;
-  background-color: #000000;
+  color: #848482;
+  background-color: #32323A;
   font-family: 'Spoqa Han Sans', sans-serif, 'Spoqa Han Sans Bold', 'Spoqa Han Sans Thin', 'Spoqa Han Sans JP', "PT Sans", Helvetica;
 }
 
