--- a/public/css/blackdoc.css
+++ b/public/css/blackdoc.css
@@ -206,7 +206,7 @@ tbody tr:nth-child(odd) th {
   text-align: center;
   padding: 2rem 1rem;
   color: rgba(255,255,255,.5);
-  background-color: #000;
+  background-color: #32323A;
   overflow: auto;
 }
 
