--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -37,7 +37,7 @@
 <div class="sidebar">
   <div class="container sidebar-sticky">
     <div class="sidebar-about">
-      <h1>
+      <h1 id="blogtitle">
         <a href="{{ site.baseurl }}" style="text-decoration: none">
           {{ site.title }}
         </a>
@@ -65,7 +65,7 @@
       <!--<a class="sidebar-nav-item" href="{{ site.github.repo }}/archive/master.zip">Download</a>-->
       <hr>
       <a href="http://canorus.github.io/tags" style="text-decoration:none">Tags</a>
-      <hr>  
+      <hr>
       <!--<div class="grid" id="searchBar">
         <div>
             <div id="search">
