--- a/public/css/blackdoc.css
+++ b/public/css/blackdoc.css
@@ -309,6 +309,13 @@ a.sidebar-nav-item:focus {
   color: #2EACFF;
   text-decoration: none;
 }
+.post-title,
+.post-title a{
+  font-size: 1.3rem
+}
+#blogtitle{
+  letter-spacing:-1px;
+}
 /* center image */
 .center-image {
   padding-left: auto;
