--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,6 +1,17 @@
 ---
 layout: default
 ---
+<script src="https://code.jquery.com/jquery-3.3.1.js"></script>
+<script src="../js/jquery.textfill.min.js"></script>
+<script>
+  function headautowidth(){
+    $('.post').textfill({
+      maxFontPixels: 0,
+      innerTag: 'h1'
+    });
+  }
+  $(headautowidth);
+</script>
 
 <div class="post">
   <h1 class="post-title">{{ page.title }}</h1>
