--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,7 +7,8 @@ layout: default
   function headautowidth(){
     $('.post').textfill({
       maxFontPixels: 0,
-      innerTag: 'h1'
+      innerTag: 'h1',
+      widthOnly: true
     });
   }
   $(headautowidth);
