--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,6 +4,7 @@
   <meta http-equiv="content-type" content="text/html; charset=utf-8">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
   <script type="text/javascript" src="/js/bigfoot.js"></script>
+  <script type="text/javascript" src="/js/jquery.textfill.min.js"></script>
   <script type="text/javascript">
   	var bigfoot = $.bigfoot(
   		{
