--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,7 @@
 
   {% include head.html %}
 
-  <body class="layout-reverse theme-base-03">
+  <body class="layout-reverse theme-base-03" onload="headautowidth();">
 
     {% include sidebar.html %}
 
