--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,9 +7,9 @@
   <script type="text/javascript" src="/js/jquery.textfill.min.js"></script>
   <script>
     function headautowidth(){
-      $('.post').textfill({
+      $('.post-title').textfill({
         maxFontPixels: 50,
-        innerTag: 'h1',
+        innerTag: 'a',
         widthOnly: true
       });
     }
