--- a/_includes/head.html
+++ b/_includes/head.html
@@ -12,6 +12,11 @@
         innerTag: 'a',
         widthOnly: true
       });
+      $('post').textfill({
+        maxFontPixels: 50,
+        innerTag: 'h1',
+        widthOnly: true
+      })
     }
   </script>
   <script type="text/javascript">
