bigfoot config modified - testing

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lang="en-us">
   <head>
+    <script type="text/javascript">
+      var bigfoot = $.bigfoot(
+          {
+            deleteOnUnhover: true,
+            preventPageScroll: true,
+            hoverDelay: 250
+          }
+      );
+    </script>
   </head>
 
   {% include head.html %}
