--- a/_includes/head.html
+++ b/_includes/head.html
@@ -22,7 +22,9 @@
   <script type="text/javascript">
   	var bigfoot = $.bigfoot(
   		{
-  	  	actionOriginalFN: "ignore",
+  	  	// actionOriginalFN: "ignore",
+        activateOnHover: "true",
+        deleteOnUnhover: "true",
   	  	positionContent: "true"
   		}
   	);
