Update css max-width

--- a/public/css/blackdoc.css
+++ b/public/css/blackdoc.css
@@ -380,8 +380,8 @@ a.sidebar-nav-item:focus {
   width:"50%";
 } */
 
-.small {
-    width: "50%";
+img.small {
+    max-width: "50%";
 }
 
 p.via {
