--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,7 @@
 
   <body class="layout-reverse theme-base-03" onload="headautowidth();">
 
-	  <!--{% include sidebar.html %}-->
+	  {% include sidebar.html %}
 
     <div class="content container">
       {{ content }}
