--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -44,7 +44,7 @@
       </h1>
       <p class="lead">{{ site.description }}</p>
     </div>
-
+<!--
     <nav class="sidebar-nav">
       <a class="sidebar-nav-item{% if page.url == site.baseurl %} active{% endif %}" href="{{ site.baseurl }}">Home</a>
 
@@ -62,11 +62,11 @@
         {% endif %}
       {% endfor %}
 
-      <!--<a class="sidebar-nav-item" href="{{ site.github.repo }}/archive/master.zip">Download</a>-->
+      <a class="sidebar-nav-item" href="{{ site.github.repo }}/archive/master.zip">Download</a>
       <hr>
       <a href="http://canorus.github.io/tags" style="text-decoration:none">Tags</a>
       <hr>
-      <!--<div class="grid" id="searchBar">
+      <div class="grid" id="searchBar">
         <div>
             <div id="search">
                 <form role="search" method="get" action="{{ site.baseurl }}/search">
@@ -89,12 +89,13 @@
                 </form>
             </div>
         </div>
-      </div>-->
+      </div>
       <hr>
       <p style="font-size:0.5rem">This blog is themed based on <a class="sidebar-nav-item" href="{{ site.github.repo }}">BlackDoc Jekyll theme</a> by <a href="https://github.com/karloespiritu">karloespiritu</a>
-      <!--<span class="sidebar-nav-item">Currently v{{ site.version }}</span>-->
+      <span class="sidebar-nav-item">Currently v{{ site.version }}</span>
     </nav>
 
     <p style="font-size:0.5rem">&copy; {{ site.time | date: '%Y' }}. All rights reserved.</p>
   </div>
 </div>
+-->
